# cpp-edge-audio

./: .gitignore  AGENTS.md  LICENSE  README.md  environment.yml
.github/: copilot-instructions.md
.github/instructions/: cpp.instructions.md  docs.instructions.md  python.instructions.md  schema.instructions.md  shell.instructions.md
artifacts/quality_model/: false_accepts.csv  false_rejects.csv  feature_importance.json  feature_schema.json  metrics.json  operating_point.json  quality_gbt.joblib  threshold_sweep.tsv
artifacts/quality_model_neura_v1/: false_accepts_test.csv  false_rejects_test.csv  feature_importance.json  feature_schema.json  model_metadata.json  operating_point.json  overlap_report.json  quality_gbt.joblib  reload_verification.json  split_summary.json  test_features.npz  test_metrics.json  test_predictions.csv  threshold_sweep.tsv  validation_features.npz  validation_metrics.json  validation_predictions.csv
benchmarks/: benchmark_m1.sh  benchmark_m3.sh  benchmark_m6.sh
data/: .gitkeep
data/labels/: eval_subset.jsonl  quality_test.jsonl  quality_train.jsonl  quality_val.jsonl
data/manifests/: librispeech_dev_clean.jsonl  librispeech_test_clean.jsonl
reports/: demo_validation.md  quality_gate_runtime_integration.md  quality_model_cpp_parity.md  quality_model_neura_v1.md  quality_model_status.md
runtime/cpp/: AGENTS.md  CMakeLists.txt
runtime/cpp/build_tests/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json  test_pipeline
runtime/cpp/build_tests/Testing/Temporary/: CTestCostData.txt
runtime/cpp/build_tests/whisper_build/: Makefile  cmake_install.cmake  whisper-config.cmake
runtime/cpp/build_tests/whisper_build/ggml/: Makefile  cmake_install.cmake  ggml-config.cmake
runtime/cpp/build_tests/whisper_build/ggml/src/: Makefile  cmake_install.cmake
runtime/cpp/build_tests/whisper_build/ggml/src/ggml-cpu/: Makefile  cmake_install.cmake
runtime/cpp/build_tests/whisper_build/src/: Makefile  cmake_install.cmake
runtime/cpp/src/: main.cpp
runtime/cpp/src/asr/: asr.cpp  asr.h
runtime/cpp/src/audio/: audio_io.cpp  audio_io.h
runtime/cpp/src/chunker/: chunker.cpp  chunker.h  vad.cpp  vad.h
runtime/cpp/src/gate/: features.cpp  features.h  gate.cpp  gate.h  quality_aggregator.cpp  quality_aggregator.h  quality_model.cpp  quality_model.h  quality_policy.cpp  quality_policy.h
runtime/cpp/src/logging/: logger.cpp  logger.h
runtime/cpp/src/scene/: adaptive.cpp  adaptive.h  scene.cpp  scene.h
runtime/cpp/tests/: quality_model_parity.cpp  quality_policy_evaluation.cpp  test_main.cpp  test_quality_gate_runtime.cpp  test_quality_model.cpp
scripts/: bench_asr.sh  build.sh  build_optimized.sh  demo_quality_gate.sh  run.sh  run_tests.sh  setup.sh  smoke_asr.sh
scripts/datasets/: build_eval_subset.py  build_manifests.py  build_quality_train.py  dataset_identity.py  download_stage1.sh  prepare_stage1.py
tests/python/: test_quality_workflow.py
tools/python/: AGENTS.md
tools/python/eval/: bench_vad_asr.py  compare_bench.py  evaluate_quality_policies.py  gate_analysis.py  gate_eval.py  gate_parity.py  gate_scene_policy.py  make_eval_set.py  parse_logs.py  rtf_plot.py  scene_diagnostics.py  scene_eval.py  vad_compare.py  wer.py
tools/python/export/: export_quality_model.py
tools/python/packaging/: bundle.py
tools/python/training/: train_quality_model.py
tools/python/tuning/: gate_calibrate.py  sweep_thresholds.py
